@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.19 ===
+* Added MIDI codes display for velocity.
 * Updated build scripts and dependencies.
 
 === 1.0.18 ===
